--- a/sass/_basic.scss
+++ b/sass/_basic.scss
@@ -19,6 +19,10 @@ body {
     font-size: 20px;
     line-height: 163%;
     letter-spacing: -0.02em;
+
+    @media (max-width: 768px) {
+        font-size: 14px;
+    }
 }
 
 h1,
@@ -67,6 +71,10 @@ img {
     font-weight: 800;
     font-size: 37px;
     letter-spacing: -0.03em;
+
+    @media (max-width: 768px) {
+        font-size: 22px;
+    }
 }
 
 .title {
@@ -74,6 +82,15 @@ img {
     line-height: 109%;
     letter-spacing: -0.03em;
     color: #fff;
+
+    @media (max-width: 768px) {
+        font-size: 48px;
+    }
+
+    @media (max-width: 400px) {
+        font-size: 40px;
+    }
+
 }
 
 .btn {
@@ -84,7 +101,13 @@ img {
     font-size: 24px;
     letter-spacing: -0.02em;
     color: #fff;
+
     /* .btn_transparent */
+    @media (max-width: 768px) {
+        font-size: 16px;
+        padding: 15px 50px;
+        border-radius: 56px;
+    }
 
     &_transparent {
         background: transparent;
@@ -92,7 +115,15 @@ img {
         border: 1px solid #dadada;
         font-weight: 400;
         letter-spacing: -0.03em;
+
+        @media (max-width: 768px) {
+
+            padding: 15px 36px;
+
+        }
     }
+
+
 }
 
 .text-row {
@@ -105,6 +136,10 @@ img {
         flex-direction: column;
         gap: 30px;
         text-align: center;
+    }
+
+    @media (max-width: 768px) {
+        margin-bottom: 40px;
     }
 
     /* .text-row__title */
