--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -1,7 +1,11 @@
 .footer {
     padding: 40px 0;
     background-color: #0b0c0d;
+
     /* .footer__container */
+    @media (max-width: 768px) {
+        padding: 20px 0;
+    }
 
     &__container {}
 
@@ -80,12 +84,22 @@
         border: 1.5px solid transparent;
         background: linear-gradient(#0b0c0d, #0b0c0d) padding-box,
             linear-gradient(-30deg, #237249, #35C66B) border-box;
+
+        @media (max-width: 768px) {
+            width: 55px;
+            height: 55px;
+            border-radius: 18px;
+        }
     }
 
     /* .footer__arrow */
 
     &__arrow {
         height: 35px;
+
+        @media (max-width: 768px) {
+            height: 27px;
+        }
     }
 
     /* .footer__phone */
@@ -93,5 +107,10 @@
     &__phone {
         font-weight: 500;
         font-size: 26px;
+
+        @media (max-width: 768px) {
+            font-size: 16px;
+        }
     }
+
 }
