--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,11 @@ body {
   line-height: 163%;
   letter-spacing: -0.02em;
 }
+@media (max-width: 768px) {
+  body {
+    font-size: 14px;
+  }
+}
 
 h1,
 h2 {
@@ -65,12 +70,27 @@ img {
   font-size: 37px;
   letter-spacing: -0.03em;
 }
+@media (max-width: 768px) {
+  .logo {
+    font-size: 22px;
+  }
+}
 
 .title {
   font-size: 80px;
   line-height: 109%;
   letter-spacing: -0.03em;
   color: #fff;
+}
+@media (max-width: 768px) {
+  .title {
+    font-size: 48px;
+  }
+}
+@media (max-width: 400px) {
+  .title {
+    font-size: 40px;
+  }
 }
 
 .btn {
@@ -83,12 +103,24 @@ img {
   color: #fff;
   /* .btn_transparent */
 }
+@media (max-width: 768px) {
+  .btn {
+    font-size: 16px;
+    padding: 15px 50px;
+    border-radius: 56px;
+  }
+}
 .btn_transparent {
   background: transparent;
   padding: 20px 55px;
   border: 1px solid #dadada;
   font-weight: 400;
   letter-spacing: -0.03em;
+}
+@media (max-width: 768px) {
+  .btn_transparent {
+    padding: 15px 36px;
+  }
 }
 
 .text-row {
@@ -104,6 +136,11 @@ img {
     flex-direction: column;
     gap: 30px;
     text-align: center;
+  }
+}
+@media (max-width: 768px) {
+  .text-row {
+    margin-bottom: 40px;
   }
 }
 .text-row--reverce {
@@ -147,14 +184,41 @@ img {
   /* .header__nav */
   /* .header__link */
 }
+@media (max-width: 768px) {
+  .header {
+    padding: 35px 0;
+  }
+}
 .header__container {
   display: flex;
   align-items: baseline;
   gap: 95px;
 }
+@media (max-width: 768px) {
+  .header__container {
+    justify-content: space-between;
+    gap: 30px;
+  }
+}
+@media (max-width: 400px) {
+  .header__container {
+    flex-direction: column;
+    gap: 20px;
+  }
+}
 .header__nav {
   display: flex;
   gap: 95px;
+}
+@media (max-width: 768px) {
+  .header__nav {
+    gap: 30px;
+  }
+}
+@media (max-width: 400px) {
+  .header__nav {
+    margin-left: auto;
+  }
 }
 .welcome {
   margin-top: 30px;
@@ -166,6 +230,11 @@ img {
   /* .welcome__stats */
   /* .welcome__img-wrapper */
   /* .welcome__img */
+}
+@media (max-width: 768px) {
+  .welcome {
+    margin-top: 10px;
+  }
 }
 .welcome__container {
   display: flex;
@@ -185,6 +254,12 @@ img {
   margin-bottom: 55px;
   position: relative;
 }
+@media (max-width: 768px) {
+  .welcome__title {
+    max-width: 335px;
+    margin-bottom: 35px;
+  }
+}
 .welcome__title::before {
   content: "";
   position: absolute;
@@ -197,13 +272,39 @@ img {
   background: linear-gradient(245deg, rgba(35, 114, 73, 0.55) 0%, rgba(53, 198, 107, 0.73) 51.85%);
   filter: blur(90px);
 }
+@media (max-width: 768px) {
+  .welcome__title::before {
+    left: 140px;
+    top: 30px;
+    height: 80px;
+    width: 80px;
+    filter: blur(50px);
+  }
+}
 .welcome__text {
   margin-bottom: 55px;
+}
+@media (max-width: 768px) {
+  .welcome__text {
+    margin-bottom: 35px;
+  }
 }
 .welcome__btn-wrapper {
   display: flex;
   gap: 15px;
   margin-bottom: 55px;
+}
+@media (max-width: 768px) {
+  .welcome__btn-wrapper {
+    margin-bottom: 35px;
+    gap: 10px;
+  }
+}
+@media (max-width: 400px) {
+  .welcome__btn-wrapper {
+    flex-direction: column;
+    text-align: center;
+  }
 }
 .welcome__img-wrapper {
   padding-right: 60px;
@@ -235,6 +336,14 @@ img {
     bottom: -150px;
   }
 }
+@media (max-width: 768px) {
+  .welcome__img-wrapper::before {
+    width: 420px;
+    height: 420px;
+    right: -100px;
+    bottom: -100px;
+  }
+}
 .welcome__img-wrapper::after {
   content: "";
   position: absolute;
@@ -247,6 +356,15 @@ img {
   background: linear-gradient(245deg, rgba(35, 114, 73, 0.55) 0%, rgba(53, 198, 107, 0.73) 51.85%);
   filter: blur(170px);
 }
+@media (max-width: 768px) {
+  .welcome__img-wrapper::after {
+    right: 90px;
+    bottom: 80px;
+    width: 130px;
+    height: 130px;
+    filter: blur(60px);
+  }
+}
 .welcome__img {
   width: 470px;
   animation: moveCup 1.5s infinite alternate ease-in-out;
@@ -254,6 +372,11 @@ img {
 @media (max-width: 992px) {
   .welcome__img {
     width: 280px;
+  }
+}
+@media (max-width: 768px) {
+  .welcome__img {
+    width: 250px;
   }
 }
 
@@ -271,15 +394,36 @@ img {
   /* .stats__item */
   /* .stats__num */
 }
+@media (max-width: 768px) {
+  .stats {
+    gap: 30px;
+  }
+}
+@media (max-width: 400px) {
+  .stats {
+    gap: 15px;
+    justify-content: center;
+  }
+}
 .stats__item {
   line-height: 144%;
   width: 126px;
+}
+@media (max-width: 768px) {
+  .stats__item {
+    width: 85px;
+  }
 }
 .stats__num {
   font-size: 62px;
   letter-spacing: -0.03em;
   color: #fff;
   line-height: 109%;
+}
+@media (max-width: 768px) {
+  .stats__num {
+    font-size: 40px;
+  }
 }
 .stats__num::after {
   content: "+";
@@ -303,9 +447,14 @@ img {
   /* .benefits__rocket */
   /* .benefits__money */
 }
+@media (max-width: 768px) {
+  .benefits {
+    margin-top: 65px;
+  }
+}
 .benefits__container {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: space-around;
   background: linear-gradient(230deg, #fff 3.94%, #e5e5e5 64.08%, #fbfbfb 88.62%);
   max-width: 1030px;
@@ -313,6 +462,20 @@ img {
   padding-bottom: 25px;
   border-radius: 46px;
   position: relative;
+}
+@media (max-width: 768px) {
+  .benefits__container {
+    border-radius: 27px;
+    padding: 20px;
+  }
+}
+@media (max-width: 576px) {
+  .benefits__container {
+    flex-direction: column;
+    align-items: center;
+    max-width: 220px;
+    gap: 25px;
+  }
 }
 .benefits__container::before {
   content: "";
@@ -325,6 +488,16 @@ img {
   border-radius: 100%;
   background: linear-gradient(245deg, rgba(35, 114, 73, 0.55) 0%, rgba(53, 198, 107, 0.73) 51.85%);
   filter: blur(100px);
+}
+@media (max-width: 576px) {
+  .benefits__container::before {
+    left: auto;
+    right: -10px;
+    top: -10px;
+    width: 100px;
+    height: 100px;
+    filter: blur(40px);
+  }
 }
 .benefits__container::after {
   content: "we\ahave";
@@ -354,9 +527,27 @@ img {
     left: 50px;
   }
 }
+@media (max-width: 768px) {
+  .benefits__container::after {
+    width: 120px;
+    height: 120px;
+    font-size: 18px;
+    left: 30px;
+  }
+}
+@media (max-width: 576px) {
+  .benefits__container::after {
+    left: 10px;
+  }
+}
 .benefits__item {
   max-width: 220px;
   text-align: center;
+}
+@media (max-width: 768px) {
+  .benefits__item {
+    max-width: 140px;
+  }
 }
 .benefits__img-wrapper {
   display: flex;
@@ -364,6 +555,11 @@ img {
   justify-content: center;
   position: relative;
   margin-bottom: 30px;
+}
+@media (max-width: 768px) {
+  .benefits__img-wrapper {
+    margin-bottom: 10px;
+  }
 }
 .benefits__img-wrapper::before {
   content: "";
@@ -374,6 +570,12 @@ img {
   background: linear-gradient(245deg, #237249 0%, #35c66d 100%);
   box-shadow: 0 4px 41px 0 rgba(0, 0, 0, 0.39);
 }
+@media (max-width: 768px) {
+  .benefits__img-wrapper::before {
+    width: 87px;
+    height: 87px;
+  }
+}
 .benefits__icon {
   width: 146px;
   position: absolute;
@@ -381,6 +583,11 @@ img {
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 5;
+}
+@media (max-width: 768px) {
+  .benefits__icon {
+    width: 85px;
+  }
 }
 .benefits__heart {
   margin-top: 5px;
@@ -392,6 +599,12 @@ img {
   color: #121517;
   margin-bottom: 15px;
 }
+@media (max-width: 768px) {
+  .benefits__title {
+    font-size: 18px;
+    margin-bottom: 5px;
+  }
+}
 .benefits__desc {
   line-height: 163%;
   color: rgba(18, 21, 23, 0.9);
@@ -401,8 +614,18 @@ img {
   margin-top: 10px;
   margin-left: -10px;
 }
+@media (max-width: 768px) {
+  .benefits__rocket {
+    width: 127px;
+  }
+}
 .benefits__money {
   width: 210px;
+}
+@media (max-width: 768px) {
+  .benefits__money {
+    width: 123px;
+  }
 }
 
 .history {
@@ -416,6 +639,12 @@ img {
   /* .history__desc */
   /* .history__title */
 }
+@media (max-width: 768px) {
+  .history {
+    margin-top: 60px;
+    padding-bottom: 0;
+  }
+}
 .history__container {
   display: flex;
   align-items: center;
@@ -426,6 +655,11 @@ img {
     flex-direction: column;
     gap: 60px;
     text-align: center;
+  }
+}
+@media (max-width: 768px) {
+  .history__container {
+    gap: 40px;
   }
 }
 .history__img-wrapper {
@@ -445,6 +679,12 @@ img {
           clip-path: polygon(67% 0, 100% 25%, 100% 100%, 0 100%, 0 0);
   background: #237249;
 }
+@media (max-width: 768px) {
+  .history__img-wrapper::before {
+    top: 15px;
+    left: -15px;
+  }
+}
 .history__img {
   max-width: 465px;
   -webkit-clip-path: polygon(67% 0, 100% 25%, 100% 100%, 0 100%, 0 0);
@@ -456,6 +696,18 @@ img {
     height: 400px;
     -o-object-fit: cover;
        object-fit: cover;
+  }
+}
+@media (max-width: 576px) {
+  .history__img {
+    width: 340px;
+    height: 270px;
+  }
+}
+@media (max-width: 400px) {
+  .history__img {
+    width: 290px;
+    height: 220px;
   }
 }
 .history__desc {
@@ -481,9 +733,22 @@ img {
     right: -255px;
   }
 }
+@media (max-width: 576px) {
+  .history__desc::before {
+    width: 550px;
+    height: 550px;
+    right: -45px;
+    bottom: -240px;
+  }
+}
 .history__title {
   margin-bottom: 65px;
   position: relative;
+}
+@media (max-width: 768px) {
+  .history__title {
+    margin-bottom: 35px;
+  }
 }
 .history__title::before {
   content: "";
@@ -500,6 +765,11 @@ img {
 .history__text {
   margin-bottom: 65px;
 }
+@media (max-width: 768px) {
+  .history__text {
+    margin-bottom: 35px;
+  }
+}
 .history__pic {
   -webkit-clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 23%, 11% 0);
           clip-path: polygon(100% 0, 100% 100%, 0 100%, 0 23%, 11% 0);
@@ -514,11 +784,21 @@ img {
   /* .products__cards */
   /* .products__card */
 }
+@media (max-width: 768px) {
+  .products {
+    margin-top: 65px;
+  }
+}
 .products__cards {
   display: flex;
   gap: 50px;
   justify-content: center;
   flex-wrap: wrap;
+}
+@media (max-width: 768px) {
+  .products__cards {
+    gap: 25px 15px;
+  }
 }
 @media (max-width: 992px) {
   .hide-text-mobile {
@@ -543,6 +823,13 @@ img {
   /* .card-products__size */
   /* .card-products__btn */
 }
+@media (max-width: 768px) {
+  .card-products {
+    width: 185px;
+    padding: 20px;
+    padding-top: 40px;
+  }
+}
 .card-products::before {
   content: "";
   position: absolute;
@@ -563,6 +850,11 @@ img {
   position: relative;
   margin-bottom: 30px;
 }
+@media (max-width: 768px) {
+  .card-products__img-wrapper {
+    margin-bottom: 10px;
+  }
+}
 .card-products__img-wrapper::before {
   content: "";
   display: inline-block;
@@ -572,6 +864,12 @@ img {
   background: linear-gradient(245deg, #237249 0%, #35c66b 100%);
   box-shadow: 0 4px 41px 0 rgba(0, 0, 0, 0.39);
 }
+@media (max-width: 768px) {
+  .card-products__img-wrapper::before {
+    width: 120px;
+    height: 120px;
+  }
+}
 .card-products__img {
   position: absolute;
   top: -30px;
@@ -580,11 +878,22 @@ img {
   filter: drop-shadow(0 4px 46px rgba(0, 0, 0, 0.48));
   transition: transform 0.5s;
 }
+@media (max-width: 768px) {
+  .card-products__img {
+    width: 115px;
+    left: 8px;
+  }
+}
 .card-products__title {
   font-weight: 500;
   font-size: 32px;
   color: #fff;
   margin-bottom: 10px;
+}
+@media (max-width: 768px) {
+  .card-products__title {
+    font-size: 22px;
+  }
 }
 .card-products__desc {
   margin-bottom: 15px;
@@ -595,15 +904,35 @@ img {
   align-items: flex-end;
   margin-bottom: 25px;
 }
+@media (max-width: 768px) {
+  .card-products__row {
+    margin-bottom: 15px;
+  }
+}
 .card-products__price {
   font-weight: 500;
   font-size: 32px;
   color: #fff;
 }
+@media (max-width: 768px) {
+  .card-products__price {
+    font-size: 22px;
+  }
+}
+@media (max-width: 768px) {
+  .card-products__size {
+    font-size: 12px;
+  }
+}
 .card-products__btn {
   font-size: 17px;
   padding: 15px 0px;
   width: 100%;
+}
+@media (max-width: 768px) {
+  .card-products__btn {
+    font-size: 14px;
+  }
 }
 
 .events {
@@ -613,6 +942,11 @@ img {
   /* .events__title */
   /* .events__text */
   /* .events__inner-wrapper */
+}
+@media (max-width: 768px) {
+  .events {
+    margin-top: 65px;
+  }
 }
 .events__text {
   max-width: 455px;
@@ -629,6 +963,14 @@ img {
   .events__inner-wrapper {
     grid-template-columns: 1fr 1fr;
     grid-template-areas: "price price" "free social" "kitchen choose";
+  }
+}
+@media (max-width: 576px) {
+  .events__inner-wrapper {
+    grid-auto-rows: 160px;
+    grid-template-columns: 1fr 1fr;
+    gap: 15px 25px;
+    grid-template-areas: "price price" "free social" "kitchen kitchen";
   }
 }
 .events__inner-wrapper::before {
@@ -674,19 +1016,42 @@ img {
   /* .event__title */
   /* .event__btn */
 }
+@media (max-width: 768px) {
+  .event {
+    padding: 20px 5px;
+    align-items: center;
+  }
+}
 .event__title {
   font-weight: 500;
   font-size: 32px;
   line-height: 109%;
   color: #fff;
   text-transform: uppercase;
-  margin-bottom: 50px;
-  width: 294px;
+  max-width: 294px;
+}
+@media (max-width: 768px) {
+  .event__title {
+    font-size: 18px;
+    max-width: 160px;
+  }
+}
+@media (max-width: 400px) {
+  .event__title {
+    font-size: 14px;
+    max-width: 120px;
+  }
 }
 .event__btn {
   padding: 20px 50px;
   width: -moz-fit-content;
   width: fit-content;
+}
+@media (max-width: 768px) {
+  .event__btn {
+    font-size: 14px;
+    padding: 10px 35px;
+  }
 }
 
 .event--price {
@@ -713,6 +1078,11 @@ img {
   background-image: url(../images/events/5.png);
   grid-area: choose;
 }
+@media (max-width: 576px) {
+  .event--choose {
+    display: none;
+  }
+}
 
 .contacts {
   padding-top: 130px;
@@ -727,6 +1097,12 @@ img {
   /* .contacts__inner-wrapper */
   /* .contacts__img */
 }
+@media (max-width: 768px) {
+  .contacts {
+    padding-top: 90px;
+    padding-bottom: 40px;
+  }
+}
 .contacts__container {
   display: flex;
   justify-content: space-between;
@@ -740,14 +1116,24 @@ img {
   }
 }
 .contacts__desc {
-  width: 390px;
+  max-width: 390px;
 }
 .contacts__title {
   margin-bottom: 50px;
 }
+@media (max-width: 576px) {
+  .contacts__title {
+    margin-bottom: 40px;
+  }
+}
 .contacts__text {
   margin-bottom: 50px;
   position: relative;
+}
+@media (max-width: 576px) {
+  .contacts__text {
+    margin-bottom: 40px;
+  }
 }
 .contacts__text::before {
   content: "";
@@ -761,6 +1147,11 @@ img {
   background: linear-gradient(245deg, rgba(35, 114, 73, 0.55) 0%, rgba(53, 198, 107, 0.73) 51.85%);
   filter: blur(90px);
 }
+@media (max-width: 768px) {
+  .contacts__text::before {
+    content: none;
+  }
+}
 .contacts__phone {
   font-weight: 500;
   font-size: 32px;
@@ -769,6 +1160,12 @@ img {
   align-items: center;
   gap: 25px;
 }
+@media (max-width: 576px) {
+  .contacts__phone {
+    font-size: 20px;
+    justify-content: center;
+  }
+}
 .contacts__phone::before {
   content: "";
   width: 45px;
@@ -776,6 +1173,12 @@ img {
   background: url(../images/icons/phone.png);
   background-size: contain;
   background-position: center;
+}
+@media (max-width: 576px) {
+  .contacts__phone::before {
+    width: 30px;
+    height: 30px;
+  }
 }
 .contacts__img-wrapper {
   position: relative;
@@ -791,6 +1194,14 @@ img {
   border-radius: 100%;
   background: linear-gradient(245deg, rgba(35, 114, 73, 0.55) 0%, rgba(53, 198, 107, 0.73) 51.85%);
   filter: blur(90px);
+}
+@media (max-width: 576px) {
+  .contacts__img-wrapper::before {
+    left: auto;
+    right: -50px;
+    top: 80px;
+    filter: blur(60px);
+  }
 }
 .contacts__img-wrapper::after {
   content: "";
@@ -812,6 +1223,14 @@ img {
     bottom: -240px;
   }
 }
+@media (max-width: 576px) {
+  .contacts__img-wrapper::after {
+    width: 630px;
+    height: 630px;
+    right: -135px;
+    bottom: -260px;
+  }
+}
 .contacts__inner-wrapper {
   position: relative;
   padding-right: 35px;
@@ -827,6 +1246,12 @@ img {
   -webkit-clip-path: polygon(30% 0, 100% 0, 100% 100%, 0 100%, 0 26%);
           clip-path: polygon(30% 0, 100% 0, 100% 100%, 0 100%, 0 26%);
   background: #237249;
+}
+@media (max-width: 576px) {
+  .contacts__inner-wrapper::before {
+    bottom: -15px;
+    right: 10px;
+  }
 }
 .contacts__inner-wrapper::after {
   content: "we\ahave";
@@ -858,6 +1283,14 @@ img {
     top: 0;
   }
 }
+@media (max-width: 576px) {
+  .contacts__inner-wrapper::after {
+    font-size: 28px;
+    width: 200px;
+    height: 200px;
+    right: -140px;
+  }
+}
 .contacts__img {
   width: 353px;
   -webkit-clip-path: polygon(30% 0, 100% 0, 100% 100%, 0 100%, 0 26%);
@@ -869,6 +1302,12 @@ img {
     height: 400px;
     -o-object-fit: cover;
        object-fit: cover;
+  }
+}
+@media (max-width: 576px) {
+  .contacts__img {
+    width: 340px;
+    height: 240px;
   }
 }
 
@@ -884,6 +1323,11 @@ img {
   /* .footer__up-link */
   /* .footer__arrow */
   /* .footer__phone */
+}
+@media (max-width: 768px) {
+  .footer {
+    padding: 20px 0;
+  }
 }
 .footer__row {
   display: flex;
@@ -942,10 +1386,27 @@ img {
   border: 1.5px solid transparent;
   background: linear-gradient(#0b0c0d, #0b0c0d) padding-box, linear-gradient(-30deg, #237249, #35C66B) border-box;
 }
+@media (max-width: 768px) {
+  .footer__up-link {
+    width: 55px;
+    height: 55px;
+    border-radius: 18px;
+  }
+}
 .footer__arrow {
   height: 35px;
+}
+@media (max-width: 768px) {
+  .footer__arrow {
+    height: 27px;
+  }
 }
 .footer__phone {
   font-weight: 500;
   font-size: 26px;
+}
+@media (max-width: 768px) {
+  .footer__phone {
+    font-size: 16px;
+  }
 }/*# sourceMappingURL=style.css.map */
