--- a/sass/_evens.scss
+++ b/sass/_evens.scss
@@ -1,6 +1,10 @@
 .events {
     margin-top: 100px;
+
     /* .events__container */
+    @media (max-width: 768px) {
+        margin-top: 65px;
+    }
 
     &__container {}
 
@@ -29,11 +33,22 @@
             "free social social choose";
         position: relative;
 
+
+
         @media(max-width: 1192px) {
             grid-template-columns: 1fr 1fr;
             grid-template-areas: "price price"
                 "free social"
                 "kitchen choose";
+        }
+
+        @media (max-width: 576px) {
+            grid-auto-rows: 160px;
+            grid-template-columns: 1fr 1fr;
+            gap: 15px 25px;
+            grid-template-areas: "price price"
+                "free social"
+                "kitchen kitchen";
         }
 
         &::before {
@@ -81,6 +96,12 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+
+    @media (max-width: 768px) {
+        padding: 20px 5px;
+        align-items: center;
+    }
+
     /* .event__title */
 
     &__title {
@@ -89,8 +110,18 @@
         line-height: 109%;
         color: #fff;
         text-transform: uppercase;
-        margin-bottom: 50px;
-        width: 294px;
+        max-width: 294px;
+
+        @media (max-width: 768px) {
+            font-size: 18px;
+            max-width: 160px;
+        }
+
+        @media (max-width: 400px) {
+            font-size: 14px;
+            max-width: 120px;
+        }
+
     }
 
     /* .event__btn */
@@ -98,6 +129,11 @@
     &__btn {
         padding: 20px 50px;
         width: fit-content;
+
+        @media (max-width: 768px) {
+            font-size: 14px;
+            padding: 10px 35px;
+        }
     }
 }
 
@@ -124,4 +160,8 @@
 .event--choose {
     background-image: url(../images/events/5.png);
     grid-area: choose;
+
+    @media (max-width: 576px) {
+        display: none;
+    }
 }
