--- a/sass/_products.scss
+++ b/sass/_products.scss
@@ -1,6 +1,10 @@
 .products {
     margin-top: 100px;
+
     /* .products__container */
+    @media (max-width: 768px) {
+        margin-top: 65px;
+    }
 
     &__container {}
 
@@ -23,6 +27,10 @@
         gap: 50px;
         justify-content: center;
         flex-wrap: wrap;
+
+        @media (max-width: 768px) {
+            gap: 25px 15px;
+        }
     }
 
     /* .products__card */
@@ -46,6 +54,12 @@
     background-color: #121517;
 
     border-radius: 30px;
+
+    @media (max-width: 768px) {
+        width: 185px;
+        padding: 20px;
+        padding-top: 40px;
+    }
 
     &::before {
         content: "";
@@ -75,6 +89,10 @@
         position: relative;
         margin-bottom: 30px;
 
+        @media (max-width: 768px) {
+            margin-bottom: 10px;
+        }
+
         &::before {
             content: "";
             display: inline-block;
@@ -84,6 +102,11 @@
             border-radius: 100%;
             background: linear-gradient(245deg, #237249 0%, #35c66b 100%);
             box-shadow: 0 4px 41px 0 rgba(0, 0, 0, 0.39);
+
+            @media (max-width: 768px) {
+                width: 120px;
+                height: 120px;
+            }
         }
     }
 
@@ -98,6 +121,11 @@
 
         filter: drop-shadow(0 4px 46px rgba(0, 0, 0, 0.48));
         transition: transform 0.5s;
+
+        @media (max-width: 768px) {
+            width: 115px;
+            left: 8px;
+        }
     }
 
     /* .card-products__title */
@@ -107,6 +135,10 @@
         font-size: 32px;
         color: #fff;
         margin-bottom: 10px;
+
+        @media (max-width: 768px) {
+            font-size: 22px;
+        }
     }
 
     /* .card-products__desc */
@@ -122,6 +154,10 @@
         justify-content: space-between;
         align-items: flex-end;
         margin-bottom: 25px;
+
+        @media (max-width: 768px) {
+            margin-bottom: 15px;
+        }
     }
 
     /* .card-products__price */
@@ -130,11 +166,19 @@
         font-weight: 500;
         font-size: 32px;
         color: #fff;
+
+        @media (max-width: 768px) {
+            font-size: 22px;
+        }
     }
 
     /* .card-products__size */
 
-    &__size {}
+    &__size {
+        @media (max-width: 768px) {
+            font-size: 12px;
+        }
+    }
 
     /* .card-products__btn */
 
@@ -142,5 +186,9 @@
         font-size: 17px;
         padding: 15px 0px;
         width: 100%;
+
+        @media (max-width: 768px) {
+            font-size: 14px;
+        }
     }
 }
